Modularize container css, redesign active games page.
The container css is used on the homepage, and now the active games
page (I'm guessing I'll use it on the createGame page, too), so it's
been moved into it's own sass file and most sizing assumptions removed.
The GameList component has been redesigned to use the card design
component.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,20 +1,28 @@
-$bg: #f8f8f8;
+$phone: 768px;
+$primary: #FFD27F;
 
 body {
 	margin: 0;
 	font-family: raleway, "helvetica neue", helvetica, arial, sans-serif;
-	color: #505458;
+	color: #303438;
 	background-color: #f8f8f8;
+}
+
+h1, h2, h3 {
+	margin: 0;
 }
 
 a {
 	color: inherit;
 	text-decoration: none;
-	padding-bottom: 0.25em;
 }
 
-a:hover {
-	border-bottom-width: 0.08em;
-	border-bottom-color: inherit;
-	border-bottom-style: dotted;
+.borderized {
+	transition: background-color 0.25s;
+	border: 0.08em solid $primary;
+	border-radius: 0.2em;
+
+	&:hover {
+		background-color: lighten($primary, 22%);
+	}
 }
