Add :active styles
When clicking `join game`, `create game`, or `start playing`, the button
will darken it's background color slightly giving it a really polished
feel.

--- a/src/styles/CreateGame.scss
+++ b/src/styles/CreateGame.scss
@@ -61,6 +61,10 @@
 				cursor: pointer;
 			}
 
+			&:active {
+				background-color: darken($bg, 3%);
+			}
+
 			@media (max-width: $phone) {
 				@include width(100%);
 				font-size: 75%;
