Redesign ChoosePlayer component, improve `disabled` feedback.
The screen where you choose a player, red, blue, or spectator, has been
completely redesigned. It uses the same responsive layout as the other 3
pages (Main, CreateGame, and GameList). It's also the most colorful, as
it uses the player color as it's background. It also shows when a player
is already taken by listing it as disabled, which brings to mind the
next point...
Disabled feedback has been improved. A consistent background is now
used, as well as setting the cursor to "not-allowed", and giving it some
consistently stylized background hover/active shading.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,17 @@
 $phone: 768px;
 $primary: #FFD27F;
+$player1: #EF476F;
+$player2: #118AB2;
+
+@mixin border($side) {
+	border-#{$side or top}: 0.1em solid #f8f8f8;
+}
+
+@mixin disabled($color:#ccc) {
+	background-color: $color;
+	cursor: not-allowed;
+	text-decoration: line-through;
+}
 
 body {
 	margin: 0;
