--- a/src/styles/CreateGame.scss
+++ b/src/styles/CreateGame.scss
@@ -3,10 +3,6 @@
 .create-game {
 	$border-color: #f0f0f0;
 
-	@mixin border($side) {
-		border-#{$side or top}: 0.1em solid #f8f8f8;
-	}
-
 	& > * {
 		@include border(top);
 		padding: 1em 0;
@@ -40,11 +36,12 @@
 			@media (max-width: $phone) {
 				@include width(100%);
 				margin-bottom: 1.5em;
+				text-align: left;
 			}
 		}
 
 		button[disabled] {
-			text-decoration: line-through;
+			@include disabled(white);
 			color: $border-color;
 		}
 
@@ -55,10 +52,10 @@
 			font-size: 100%;
 			background-color: $bg;
 			padding: 1em;
+			cursor: pointer;
 
 			&:hover {
 				background-color: darken($bg, 2%);
-				cursor: pointer;
 			}
 
 			&:active {
